--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "build": "rm functions/views/includes/* && cp src/includes/* functions/views/includes && rm functions/views/layouts/* && cp src/layouts/* functions/views/layouts && rm -r public && parcel build src/*.pug src/docs/*.pug src/styles/main.scss src/styles/cookie.scss src/js/cookie.js src/js/prevMail.js src/js/calendar.js src/js/global.js src/img/scmed/* src/img/NLogoHalignT.svg src/img/logoT.svg src/img/wlogoT.svg src/publicidad/* src/google2ff882864ba47fa1.html --out-dir public"
   },
   "devDependencies": {
-    "cssnano": "^4.1.10",
+    "cssnano": "^5.0.2",
     "pug": "^3.0.2",
     "sass": "^1.32.8"
   },
   "dependencies": {
-    "is-svg": "^4.3.1"
+    "is-svg": "^4.3.1",
+    "lodash": "^4.17.21",
+    "postcss": "^8.2.15"
   }
 }
